# pill_image_search

./: .gitignore  README.md
backend/: Dockerfile  docker-compose.prod.yml  fetch_seq.py  main.py  manage.py  pyproject.toml
backend/apps/bookmarks/: README.md  app.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
backend/apps/bookmarks/migrations/: 0001_initial.py
backend/apps/mypage/: __init__.py  apps.py  serializers.py  tests.py  urls.py  views.py
backend/apps/pills/: apps.py  models.py  serializers.py  services.py  test_pills.py  tests.py  urls.py
backend/apps/pills/search_histories/: pagination.py  serilizers.py  urls.py  utils.py  views.py
backend/apps/pills/search_uploads/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/pills/search_uploads/migrations/: 0001_initial.py  0002_alter_uploadrequest_id.py
backend/apps/pills/views/: pill_detail_view.py  pill_list_view.py  pill_search_view.py
backend/apps/users/: test_signup.py  validators.py
backend/apps/users/models/: refresh_token.py  user.py  user_auth_email.py  user_auth_provider_accounts.py
backend/apps/users/serializers/: email.py  register.py
backend/apps/users/services/: email_service.py  jwt_service.py
backend/apps/users/urls/: auth_urls.py  user_urls.py
backend/apps/users/views/auth/: email_view.py  login_view.py  logout_view.py  (+3 more)
backend/config/: urls.py
backend/config/settings/: __init__.py  base.py  dev.py  prod.py  test.py
backend/deploy/: run_gunicorn_prod.sh
backend/templates/email/: verification_email.html
(+3 files in other folders)
